--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.1.1",
+    "typeface-caveat": "^0.0.76",
+    "typeface-roboto": "^0.0.75",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
