--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-styled-components": "^3.3.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.2",
     "styled-components": "^5.1.1",
     "typeface-caveat": "^0.0.76",
     "typescript": "^3.7.2"
