--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
     "styled-components": "^5.1.1",
+    "styled-reset": "^4.2.1",
     "typeface-caveat": "^0.0.76",
     "typescript": "^3.7.2"
   },
