--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.15",
     "gatsby-plugin-styled-components": "^3.3.3",
+    "polished": "^3.6.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
