--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.15",
     "gatsby-plugin-styled-components": "^3.3.3",
+    "gatsby-source-filesystem": "^2.3.31",
+    "gatsby-transformer-remark": "^2.8.36",
     "polished": "^3.6.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
