--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.15",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-source-filesystem": "^2.3.31",
     "gatsby-transformer-remark": "^2.8.36",
+    "gatsby-transformer-sharp": "^2.5.19",
     "polished": "^3.6.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
