--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.3.3",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.3.31",
     "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.19",
+    "gsap": "^3.5.1",
     "polished": "^3.6.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
