--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@types/gsap": "^1.20.2",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-modal": "^3.10.6",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-plugin-transition-link": "^1.20.5",
@@ -30,9 +32,11 @@
     "polished": "^3.6.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
     "styled-media-query": "^2.1.2",
     "styled-reset": "^4.2.1",
+    "ts-node": "^9.0.0",
     "typeface-caveat": "^0.0.76",
     "typescript": "^3.7.2"
   },
