--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-plugin-transition-link": "^1.20.5",
